[gd_scene load_steps=5 format=3 uid="uid://chu5aj2qfbgtr"]

[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="1_victory"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="2_title_font"]
[ext_resource type="FontFile" uid="uid://brfvbtde0o65k" path="res://assets/fonts/FiraCode-Regular.ttf" id="3_body_font"]
[ext_resource type="Theme" uid="uid://bif1vn82s31vk" path="res://scenes/GUI.tres" id="4_theme"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_victory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.180392, 0.8, 0.443137, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_title_font")
theme_override_font_sizes/font_size = 68
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveComplete" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 120.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.611765, 0.0705882, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_body_font")
theme_override_font_sizes/font_size = 24
text = "Objective Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="XPContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_theme")
text = "Return to Main Menu"
